force-app/main/default/objects/OpenAI_Config__mdt/OpenAI_Config__mdt.object-meta.xml
<CustomObject>
    <label>OpenAI Config</label>
    <pluralLabel>OpenAI Configs</pluralLabel>
</CustomObject>