force-app/main/default/objects/OpenAI_Config__mdt/fields/MaxTokens__c.field-meta.xml
<CustomField>
    <fullName>MaxTokens__c</fullName>
    <label>Max Tokens</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>